# voicevox_tui_chat

./: CLAUDE.md  Cargo.toml  readme.md
.claude/: settings.local.json
src/: app.rs  audio.rs  audio_processor.rs  config.rs  features.rs  lib.rs  main.rs  openai.rs  sound.rs
src/features/: chat.rs  model_select.rs  voice.rs
src/features/chat/: components.rs  events.rs  props.rs  state.rs  theme.rs  worker.rs
src/features/model_select/: component.rs  events.rs  props.rs
src/features/settings/: component.rs  events.rs  props.rs
src/features/shared/: text_utils.rs
src/features/terminal/: app.rs
