[package]
name = "voicevox_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
dotenvy = "0.15.7"
reqwest = {version="0.12.12", features=["json", "stream"]}
futures = "0.3"
rodio = "0.20.1"
serde = {version="1.0.217", features=["derive"]}
serde_json = "1.0.135"
tokio = {version = "1.43.0", features = ["full"]}
